--- a/paper/references.bib
+++ b/paper/references.bib
@@ -405,3 +405,12 @@ address = {Los Alamitos, CA, USA},
 @article{webers,author={Rensink, R.~A. and Baldridge, G.},Year=2010,title={The perception of correlation in scatterplots}, Journal={Computer Graphics Forum}, volume=29, pages={1203--1210}}
 
 @article{Cleveland1982, Title={Variables on Scatterplots Look More Highly Correlated When the Scales are Increased}, Author={Cleveland, W.~S. and Diaconis, P. and McGill, R.}, journal={Science, New Series}, volume=216, Number=4550, Year=1982, pages={1138--1141}}
+
+@book{Tufte:1986,
+ author = {Tufte, Edward R.},
+ title = {The Visual Display of Quantitative Information},
+ year = {1986},
+ isbn = {0-9613921-0-X},
+ publisher = {Graphics Press},
+ address = {Cheshire, CT, USA},
+} 
